[Signin][Android] Move AccountManagerFacade unit tests to components/signin/public
This CL moves AccountManagerFacade unit tests to
components/signin/public and update some library usage according to the
current tests standard.

Bug: 1172172
Change-Id: I1e0ba0deeba71bc65b163810998b299585f67572
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2659057
Reviewed-by: Pâris Meuleman <pmeuleman@chromium.org>
Commit-Queue: Alice Wang <aliceywang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#848561}