@@ -4,10 +4,10 @@
 
 package org.chromium.components.signin;
 
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
-import static org.mockito.MockitoAnnotations.initMocks;
 import static org.robolectric.Shadows.shadowOf;
 
 import android.accounts.Account;
@@ -16,15 +16,14 @@ import android.content.Intent;
 import android.os.Bundle;
 import android.os.UserManager;
 
-import androidx.test.filters.SmallTest;
-
-import com.google.common.collect.ImmutableList;
-
 import org.junit.Assert;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnit;
+import org.mockito.junit.MockitoRule;
 import org.robolectric.RuntimeEnvironment;
 import org.robolectric.annotation.Config;
 
@@ -33,13 +32,13 @@ import org.chromium.base.metrics.UmaRecorderHolder;
 import org.chromium.base.task.test.CustomShadowAsyncTask;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.base.test.util.CallbackHelper;
+import org.chromium.components.signin.AccountManagerFacade.ChildAccountStatusListener;
 import org.chromium.components.signin.test.util.AccountHolder;
 import org.chromium.components.signin.test.util.FakeAccountManagerDelegate;
 import org.chromium.testing.local.CustomShadowUserManager;
 
 import java.util.List;
 import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * Robolectric tests for {@link AccountManagerFacade}. See also {@link AccountManagerFacadeTest}.
@@ -54,12 +53,14 @@ public class AccountManagerFacadeImplTest {
     private FakeAccountManagerDelegate mDelegate;
     private AccountManagerFacade mFacade;
 
+    @Rule
+    public final MockitoRule mMockitoRule = MockitoJUnit.rule();
+
     @Mock
     private UmaRecorder mUmaRecorderMock;
 
     @Before
     public void setUp() {
-        initMocks(this);
         UmaRecorderHolder.setNonNativeDelegate(mUmaRecorderMock);
         Context context = RuntimeEnvironment.application;
         UserManager userManager = (UserManager) context.getSystemService(Context.USER_SERVICE);
@@ -86,7 +87,6 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test
-    @SmallTest
     public void testRegisterObserversCalledInConstructor() {
         FakeAccountManagerDelegate delegate = spy(new FakeAccountManagerDelegate());
         verify(delegate, never()).registerObservers();
@@ -95,7 +95,6 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test
-    @SmallTest
     public void testCountOfAccountLoggedAfterAccountsFetched() {
         addTestAccount("test@gmail.com");
         AccountManagerFacade facade = new AccountManagerFacadeImpl(mDelegate);
@@ -111,7 +110,6 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test
-    @SmallTest
     public void testCanonicalAccount() {
         addTestAccount("test@gmail.com");
         List<Account> accounts = mFacade.tryGetGoogleAccounts();
@@ -125,7 +123,6 @@ public class AccountManagerFacadeImplTest {
     // If this test starts flaking, please re-open crbug.com/568636 and make sure there is some sort
     // of stack trace or error message in that bug BEFORE disabling the test.
     @Test
-    @SmallTest
     public void testNonCanonicalAccount() {
         addTestAccount("test.me@gmail.com");
         List<Account> accounts = mFacade.tryGetGoogleAccounts();
@@ -137,100 +134,92 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test
-    @SmallTest
     public void testGetAccounts() throws AccountManagerDelegateException {
-        Assert.assertEquals(ImmutableList.of(), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(), mFacade.getGoogleAccounts());
 
         Account account = addTestAccount("test@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         Account account2 = addTestAccount("test2@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
 
         Account account3 = addTestAccount("test3@gmail.com");
-        Assert.assertEquals(
-                ImmutableList.of(account, account2, account3), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2, account3), mFacade.getGoogleAccounts());
 
         removeTestAccount(account2);
-        Assert.assertEquals(ImmutableList.of(account, account3), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account3), mFacade.getGoogleAccounts());
     }
 
     @Test
-    @SmallTest
     public void testGetAccountsWithAccountPattern() throws AccountManagerDelegateException {
         setAccountRestrictionPatterns("*@example.com");
         Account account = addTestAccount("test@example.com");
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         addTestAccount("test@gmail.com"); // Doesn't match the pattern.
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         Account account2 = addTestAccount("test2@example.com");
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
 
         addTestAccount("test2@gmail.com"); // Doesn't match the pattern.
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
 
         removeTestAccount(account);
-        Assert.assertEquals(ImmutableList.of(account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account2), mFacade.getGoogleAccounts());
     }
 
     @Test
-    @SmallTest
     public void testGetAccountsWithTwoAccountPatterns() throws AccountManagerDelegateException {
         setAccountRestrictionPatterns("test1@example.com", "test2@gmail.com");
         addTestAccount("test@gmail.com"); // Doesn't match the pattern.
         addTestAccount("test@example.com"); // Doesn't match the pattern.
-        Assert.assertEquals(ImmutableList.of(), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(), mFacade.getGoogleAccounts());
 
         Account account = addTestAccount("test1@example.com");
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         addTestAccount("test2@example.com"); // Doesn't match the pattern.
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         Account account2 = addTestAccount("test2@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
     }
 
     @Test
-    @SmallTest
     public void testGetAccountsWithAccountPatternsChange() throws AccountManagerDelegateException {
-        Assert.assertEquals(ImmutableList.of(), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(), mFacade.getGoogleAccounts());
 
         Account account = addTestAccount("test@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         Account account2 = addTestAccount("test2@example.com");
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
 
         Account account3 = addTestAccount("test3@gmail.com");
-        Assert.assertEquals(
-                ImmutableList.of(account, account2, account3), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2, account3), mFacade.getGoogleAccounts());
 
         setAccountRestrictionPatterns("test@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
 
         setAccountRestrictionPatterns("*@example.com", "test3@gmail.com");
-        Assert.assertEquals(ImmutableList.of(account2, account3), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account2, account3), mFacade.getGoogleAccounts());
 
         removeTestAccount(account3);
-        Assert.assertEquals(ImmutableList.of(account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account2), mFacade.getGoogleAccounts());
 
         clearAccountRestrictionPatterns();
-        Assert.assertEquals(ImmutableList.of(account, account2), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account, account2), mFacade.getGoogleAccounts());
     }
 
     @Test
-    @SmallTest
     public void testGetAccountsMultipleMatchingPatterns() throws AccountManagerDelegateException {
         setAccountRestrictionPatterns("*@gmail.com", "test@gmail.com");
         Account account = addTestAccount("test@gmail.com"); // Matches both patterns
-        Assert.assertEquals(ImmutableList.of(account), mFacade.getGoogleAccounts());
+        Assert.assertEquals(List.of(account), mFacade.getGoogleAccounts());
     }
 
     @Test
-    @SmallTest
     public void testCheckChildAccount() {
         Account testAccount = addTestAccount("test@gmail.com");
         Account ucaAccount = addTestAccount(
@@ -248,7 +237,6 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test
-    @SmallTest
     public void testGetAndInvalidateAccessToken() throws AuthException {
         final Account account = addTestAccount("test@gmail.com");
         final AccessTokenData originalToken = mFacade.getAccessToken(account, TEST_TOKEN_SCOPE);
@@ -263,7 +251,6 @@ public class AccountManagerFacadeImplTest {
     }
 
     @Test(expected = IllegalStateException.class)
-    @SmallTest
     public void testAccountManagerFacadeProviderGetNullInstance() {
         AccountManagerFacadeProvider.getInstance();
     }
@@ -283,11 +270,8 @@ public class AccountManagerFacadeImplTest {
     }
 
     private void assertChildAccountStatus(Account account, @ChildAccountStatus.Status int status) {
-        final AtomicInteger callCount = new AtomicInteger();
-        mFacade.checkChildAccountStatus(account, result -> {
-            callCount.incrementAndGet();
-            Assert.assertEquals(result, status);
-        });
-        Assert.assertEquals(1, callCount.get());
+        ChildAccountStatusListener listenerMock = mock(ChildAccountStatusListener.class);
+        mFacade.checkChildAccountStatus(account, listenerMock);
+        verify(listenerMock).onStatusReady(status);
     }
 }
